# core

./: .babelrc  .cursorignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  MONOREPO.md  Makefile  README.md  SONORA.md  assetstorage.did  build.sh  bundle-stats-minimal.json  canister_ids.json  chad.sh  components.json  constants.sh  deploy.txt  dfx.json  dfx_local.json  dfx_mainnet.json  fix-selector.js  generateTree.js  ic-use-internet-identity-0.2.0.tgz  ic-use-internet-identity-0.2.1.tgz  ic-use-nfid-identity-0.1.0.tgz  ic-use-siwo-identity-0.1.0.tgz  install.sh  jest.config.js  jest.setup.js  mops.toml  network_build.sh  package-lock.json  package.json  seed.txt  setup.md  shelf_item_scenario.sh  shelf_order_test.sh  shelf_scenario.sh  (+7 more)
src/NFT/: .gitignore  Cargo.toml  README.org
src/NFT/examples/ucg_nft/: Cargo.toml  Makefile  demo.sh  dfx.txt  ucg_nft.did
src/NFT/examples/ucg_nft/src/: lib.rs
src/NFT/icp-token-derive/: Cargo.toml
src/NFT/icp-token-derive/src/: lib.rs
src/NFT/src/: lib.rs
src/alex_backend/: Cargo.toml  alex_backend.did
src/alex_backend/src/: engine.rs  lib.rs  librarian.rs  nft.rs  nft_init.rs  nft_users.rs  wallet_keys.rs
src/alex_backend/src/dialectica/: mod.rs  store.rs
src/alex_backend/src/dialectica/api/: queries.rs  updates.rs
src/alex_backend/src/dialectica/models/: activity.rs  mod.rs
src/alex_librarian/: Cargo.toml  alex_librarian.did
src/alex_librarian/src/: lib.rs  librarian.rs  node.rs
src/assets_canister/: Cargo.toml  assets_canister.did  plan.md
src/assets_canister/src/: lib.rs  queries.rs  storage.rs  update.rs  updates.rs  utils.rs
src/authentication/: Cargo.toml  authentication.did
src/authentication/src/: lib.rs
src/authentication/src/core/: crypto.rs  error.rs  mod.rs  randomness.rs  storage.rs  time.rs  types.rs
src/authentication/src/ic/: delegation.rs  expiration.rs  mod.rs  proof.rs  pubkey.rs  tree.rs
src/authentication/src/providers/: mod.rs
src/authentication/src/providers/arweave/: mod.rs  settings.rs  siwa_delegation.rs  siwa_login.rs  siwa_message.rs
src/authentication/src/providers/ethereum/: mod.rs  settings.rs  siwe_delegation.rs  siwe_login.rs  siwe_message.rs
src/authentication/src/providers/oisy/: mod.rs  settings.rs  siwo_delegation.rs  siwo_login.rs
src/authentication/src/providers/solana/: mod.rs  settings.rs  siws_delegation.rs  siws_login.rs  siws_message.rs
src/bookmarks/: Cargo.toml  backend.did  backend.txt  bookmarks.did
src/bookmarks/src/: bookmarks.rs  credits.rs  favorites.rs  folders.rs  lib.rs  queries.rs  storage.rs  updates.rs  utils.rs
src/ic_siwo/: Cargo.toml  README.md  ic_siwo.did
src/ic_siwo/src/: hash.rs  lib.rs  macros.rs  queries.rs  store.rs  types.rs  utils.rs
src/ic_siwo/src/challenge/: map.rs  mod.rs  types.rs  updates.rs  utils.rs
src/ic_siwo/src/delegation/: mod.rs  types.rs  updates.rs  utils.rs
src/ic_siwo/src/icrc21/: types.rs  updates.rs
src/ic_siwo/src/login/: mod.rs  types.rs  updates.rs  utils.rs
src/ic_siwo/src/settings/: builder.rs  mod.rs  types.rs  utils.rs
src/ic_siwo/src/signature/: expiration.rs  map.rs  mod.rs  types.rs
src/icp_swap/: Cargo.toml  README.md  dfx.json  icp_swap.did  icp_swap_prelim_audit.txt
src/icp_swap/src/: error.rs  guard.rs  lib.rs  queries.rs  script.rs  storage.rs  update.rs  utils.rs
src/icp_swap/src/icp_transfer_backend/: Cargo.toml
src/icp_swap/src/icp_transfer_backend/src/: lib.rs
src/kairos/: Cargo.toml  kairos.did
src/kairos/src/: constants.rs  guard.rs  lib.rs  store.rs
src/kairos/src/api/: mod.rs  queries.rs  updates.rs
src/kairos/src/core/: balance.rs  mod.rs  multiplier.rs  provably_fair.rs  randomness.rs
src/kairos/src/errors/: game.rs
src/kairos/src/models/: balance.rs  game.rs  mod.rs
src/logs/: Cargo.toml  log.did  logs.did
src/logs/src/: guard.rs  lib.rs  script.rs  storage.rs  update.rs  utils.rs
src/stripe/: Cargo.toml  stripe.did
src/stripe/src/: exchange_rate.rs  http.rs  lib.rs  queries.rs  storage.rs  stripe.rs  swap.rs  types.rs  webhook.rs
src/tests/: Cargo.toml  channels.md  faq.md  lbryfun.md  lexigraph.md  lib.rs  likes.md  milestones.md  plan.md  tests.did
src/tests/scripts/: basic.sh  build.sh  nfts.sh
src/tests/src/: balances.rs  burn.rs  burn_lbry.rs  claim.rs  lib.rs  stake.rs  swap.rs  triggers.rs  utils.rs
src/tests/temp/: burn.rs  lib.rs  utils.rs
src/tokenomics/: Cargo.toml  lbryfun_audit.md  tokenomics.  tokenomics.did  tokenomics_audit.md  tokenomics_audit.txt  tokenomics_audit5.md
src/tokenomics/src/: error.rs  guard.rs  lib.rs  queries.rs  storage.rs  update.rs  utils.rs
src/ucg_backend/: Cargo.toml  ucg_backend.did  ugd_backend.did
src/ucg_backend/src/: book.rs  engine.rs  lib.rs  nft.rs  node.rs  source_cards.rs
src/ucg_backend/src/declarations/ugd_backend/: index.d.ts  index.js  ugd_backend.did.js
src/ucg_backend/src/declarations/ugd_frontend/: index.d.ts  index.js
src/ugd_backend/: .env  Cargo.toml  backend.did  stablemem_examples.did  ugd_backend.did
src/ugd_backend/db/declarations/mission_control/: index.d.ts  index.js
src/ugd_backend/db/declarations/observatory/: index.d.ts  (+1 more)
src/ugd_backend/db/satellite/: Cargo.toml
src/ugd_backend/db/shared/: Cargo.toml
src/ugd_backend/src/: engine.rs  lib.rs  meilisearch.rs  memory.rs  source_cards.rs  types.rs  utils.rs  wallet_keys.rs  weaviate.rs
src/ugd_backend/src/author_card/: mod.rs
src/ugd_backend/src/book_card/: mod.rs
src/ugd_backend/src/message_card/: mod.rs
src/ugd_backend/src/references/: stable_memory_examples.rs
src/ugd_backend/src/test_books/: RomeoandJuliet.epub  test.txt
src/user/: Cargo.toml  user.did
src/user/src/: lib.rs  store.rs
src/user/src/api/: mod.rs
src/user/src/errors/: engine.rs  general.rs  mod.rs  node.rs  user.rs  wallet.rs
src/user/src/models/: engine.rs  mod.rs  node.rs  user.rs  wallet.rs
src/user/src/validations/: engine.rs  node.rs  user.rs  wallet.rs
src/vetkd/: Cargo.toml  vetkd.did
src/vetkd/src/: ibe.rs  lib.rs  types.rs  utility.rs
src/xrc/: Cargo.toml  xrc.did
src/xrc/src/: lib.rs
(+3294 files in other folders)
