[workspace]
members = [
    "src/alex_backend",
    "src/system_api",
    "src/vetkd",
    "src/bookmarks",
    "src/icp_swap",
    "src/registry",
    "src/tokenomics",
    "src/nft_manager",
    "src/logs",
    "src/xrc",
    "src/user",
    "src/emporium",
    "src/logs",
    "src/asset_canister",

]
resolver = "2"
