[workspace]
members = [
    "src/alex_backend",
    "src/authentication",
    "src/system_api",
    "src/vetkd",
    "src/icp_swap",
    "src/perpetua",
    "src/tokenomics",
    "src/nft_manager",
    "src/logs",
    "src/xrc",
    "src/user",
    "src/alex_wallet",
    "src/emporium",
    "src/logs",
    "src/asset_manager",
    "src/feed",
    "src/alex_revshare",
]
resolver = "2"
