[package]
name = "icp-token"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = "0.10"
ciborium = "0.2"
ic-cdk = "0.13"
ic-cdk-macros = "0.8"
ic-stable-structures = "0.6"
icrc-ledger-types = "0.1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
ic-cdk-timers = "0.7"
num-traits = "0.2"
sha3 = "0.10"
hmac = "0.12"
thiserror = "1"
serde_json = "1"

icp-token-derive = {path = "icp-token-derive"}
maplit = "1"