[package]
name = "alex_librarian"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["custom"] }
candid = "0.10.7"
ic-stable-structures = "0.6.1"
ic-cdk = "0.13.2"
sha2 = "0.10.2"

serde = { version = "1.0.188", features = ["derive"] }
hex = "0.4"

