[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13.2"
ic-cdk-timers = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
ic-stable-structures = "0.7"
ic-certified-map = "0.4"
hex = "0.4"
sha2 = "0.10"
k256 = { version = "0.13", features = ["ecdsa", "sha256"], default-features = false }
regex = { version = "1.10", default-features = false, features = ["std"] }
url = { version = "2.5", default-features = false }
getrandom = { version = "0.2", features = ["custom"], default-features = false }
simple_asn1 = "0.6.2"
serde_cbor = "0.11.2"
serde_bytes = "0.11"
time = { version = "0.3", features = ["std", "formatting", "parsing"], default-features = false }
sha3 = { version = "0.10", default-features = false }
tiny-keccak = { version = "2.0", features = ["keccak"], default-features = false }
rand_chacha = { version = "0.9.0", default-features = false }
serde_json = "1.0.145"
leb128 = "0.2"
bs58 = "0.5.1"
ed25519-dalek = "2.2.0"
base64 = "0.22.1"
rsa = "0.9.8"
