[package]
name = "bookmarks"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ciborium = "0.2.2"
ic-cdk = "0.12"
ic-cdk-macros = "0.13.2"
ic-cdk-timers = "0.6"
ic-ledger-types = "0.10"
ic-stable-structures = "0.6.4"
icrc-ledger-types = "0.1.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"
num-bigint = "0.4.4"