[package]
name = "ic_siwo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.9"
ic-cdk = "0.15.1"
ic-stable-structures = "0.6.5"
ic-certified-map = "0.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.125"
serde_bytes = "0.11.15"

serde_cbor = "0.11.2"
hex = "0.4.3"
ic-cdk-timers = { version = "0.9.0" }
url = "2.4.1"
rand_chacha = { version = "0.3.1" }
sha2 = "0.9.9"
simple_asn1 = "0.6.2"
ed25519-dalek = "2.1.1"


[dev-dependencies]
rand = "0.8.5"
