[package]
name = "icp_swap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.4"
ic-cdk = "0.12.1"
ic-ledger-types = "0.9.0"
serde = "1.0.197"
serde_derive = "1.0.197"
ic-cdk-timers = "0.6" # Feel free to remove this dependency if you don't need timers
icrc-ledger-types = "0.1.5"
num-bigint = "0.4.4"
serde_bytes = "0.11.5"
ic-types = "0.7.0"
ic-cdk-macros = "0.13.3"
hex = "0.4.3"
