[package]
name = "icp_swap"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { version = "0.10.7", features = ["value"] }
ic-cdk = "0.13.2"
ic-cdk-macros = "0.13.2"
ic-ledger-types = "0.9.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.197"
ic-cdk-timers = "0.7.0"
icrc-ledger-types = "0.1.5"
num-bigint = "0.4.4"
serde_bytes = "0.11.5"
ic-types = "0.7.0"
hex = "0.4.3"
num-traits = "0.2.19"
rustic = "0.1.9"
futures = "0.3.30"
serde_json = "1.0"
b3_utils = "0.12.1"
ic-stable-structures = "0.6.1"
