[package]
name = "kairos"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.10"
ic-cdk = "0.17.0"
ic-cdk-macros = "0.17.0"
ic-cdk-timers = "0.11.0"
ic-stable-structures = "0.6.4"
icrc-ledger-types = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
rand_chacha = "0.3"
rand_core = "0.6"
