[package]
name = "logs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.197"
serde_bytes = "0.11.5"
serde_json = "1.0"
icrc-ledger-types = "0.1.5"
num-bigint = "0.4.4"
ic-types = "0.7.0"
ic-ledger-types = "0.9.0"