[package]
name = "stripe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17.0"
ic-cdk-macros = "0.17.0"
ic-http-certification = "3.0.3"
ic-stable-structures = "0.6"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
urlencoding = "2.1.3"
