[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { version = "0.10.7", features = ["value"] }
ic-cdk = "0.13.2"
ic-cdk-timers = "0.7.0"
ic-cdk-macros = "0.13.2"
ic-ledger-types = "0.9.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.197"
icrc-ledger-types = "0.1.5"