[package]
name = "ucg_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ciborium = "0.2.2"
ic-cdk = "0.12"
ic-cdk-macros = "0.13.2"
ic-cdk-timers = "0.6"
serde_json = "1.0"
ic-stable-structures = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"