[package]
name = "user"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.10"
ic-cdk = "0.17.0"
## serde = "1.0.208"
regex = "1.11.1"
lazy_static = "1.5.0"
url = "2.5.3"
ic-cdk-macros = "0.17.0"
ic-stable-structures = "0.6.4"

rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"   # For JSON parsing
jsonwebkey = "0.3.5"

base64 = "0.21"
yasna = "0.5"
num-bigint = "0.4"

jose-jwk = "0.1.2"
rsa-oaep-pss = "1.1.0"

sha2 = "0.10"