[package]
name = "vetkd"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]

getrandom = { version = "0.2", features = ["custom"] }

candid = "0.10.7"
ic-stable-structures = "0.6.1"
ic-cdk = "0.13.2"
serde = { version = "1.0.188", features = ["derive"] }


ic_bls12_381 = { version = "=0.10.0", default-features = false, features = [
    "groups",
    "pairings",
    "alloc",
    "experimental",
    "zeroize",
] }
lazy_static = "1.4.0"
pairing = "0.23"
rand = "0.8.5"
rand_chacha = "0.3.1"
sha2 = "0.10.8"
sha3 = "0.10.8"
subtle = "2.5"
wasm-bindgen = { version = "0.2.84", optional = true }
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
hex = "0.4.3"
