[package]
name = "xrc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { version = "0.10.7", features = ["value"] }
ic-cdk = "0.13.2"
ic-cdk-macros = "0.13.2"
ic-ledger-types = "0.9.0"
serde = { version = "1.0.188", features = ["derive"] }

[build-dependencies]
ic-cdk-bindgen = "0.1"

[profile.release]
debug = false
strip = "debuginfo"
lto = true
opt-level = 'z'
codegen-units = 1

[features]
export-api = []